fixtures/semantic/invalid/recovery/broken-attribute.php
<?php
#[RecoveryAttribute(]
function recovery_broken_attribute(): void {}
